force-app/main/default/objects/ffr__FilterElement__c/ffr__FilterElement__c.object-meta.xml
<CustomObject>
    <description>Stores a logical expression Element. Elements can be combined to make more complex expressions.</description>
    <label>Filter Element</label>
    <nameField>
        <displayFormat>FE-{000000}</displayFormat>
        <label>Filter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Filter Elements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>