force-app/main/default/objects/ffr__FilterElement__c/fields/ffr__Field__c.field-meta.xml
<CustomField>
    <fullName>ffr__Field__c</fullName>
    <label>Field</label>
    <length>120</length>
    <type>Text</type>
</CustomField>