force-app/main/default/objects/ffr__FilterElement__c/fields/ffr__Filter__c.field-meta.xml
<CustomField>
    <fullName>ffr__Filter__c</fullName>
    <label>Filter</label>
    <referenceTo>ffr__Filter__c</referenceTo>
    <relationshipLabel>Filter Elements</relationshipLabel>
    <relationshipName>FilterElements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>