force-app/main/default/objects/ffr__FilterElement__c/fields/ffr__FromValue__c.field-meta.xml
<CustomField>
    <fullName>ffr__FromValue__c</fullName>
    <label>From</label>
    <length>120</length>
    <type>Text</type>
</CustomField>