force-app/main/default/objects/ffr__FilterElement__c/fields/ffr__ToValue__c.field-meta.xml
<CustomField>
    <fullName>ffr__ToValue__c</fullName>
    <label>To</label>
    <length>120</length>
    <type>Text</type>
</CustomField>